--- a/css/shop-mo.css
+++ b/css/shop-mo.css
@@ -54,6 +54,10 @@ input[type=number]::-webkit-outer-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+::placeholder {
+  font-size: 4.16666667vw;
+  color: #AAAAAA;
+}
 .container {
   height: 100%;
 }
@@ -193,7 +197,7 @@ input[type='number'] {
   padding-right: 0vw;
   padding-bottom: 5.83333333vw;
   padding-left: 0vw;
-  height: 73.88888889vw;
+  height: 105vw;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
 }
 .container .wrap header.open .dim {
@@ -289,6 +293,9 @@ input[type='number'] {
   overflow: hidden;
   isolation: isolate;
 }
+.container .wrap section article.top .suggestion ul li:last-child {
+  margin-bottom: 0vw;
+}
 .container .wrap section article.top .suggestion ul li a {
   width: 100%;
   height: 100%;
@@ -298,6 +305,47 @@ input[type='number'] {
 }
 .container .wrap section article.top .suggestion ul li:hover img {
   transform: scale(1.14);
+}
+.container .wrap section article.banner {
+  margin-top: 22.22222222vw;
+}
+.container .wrap section article.banner .swiper {
+  width: 83.33333333vw;
+  overflow: hidden;
+}
+.container .wrap section article.banner .swiper .swiper-slide {
+  height: 22.22222222vw;
+  padding-top: 6.11111111vw;
+  box-sizing: border-box;
+  text-align: center;
+  background-color: #F1E3D3;
+}
+.container .wrap section article.banner .swiper .swiper-slide p {
+  font-size: 3.88888889vw;
+  line-height: 5vw;
+  letter-spacing: -0.01em;
+  color: #111111;
+  font-weight: 500;
+}
+.container .wrap section article.banner .swiper .swiper-slide p b {
+  color: #E27700;
+  font-weight: 700;
+}
+.container .wrap section article.banner .swiper .swiper-pagination {
+  bottom: -3.33333333vw;
+}
+.container .wrap section article.banner .swiper .swiper-pagination .swiper-pagination-bullet {
+  width: 1.11111111vw;
+  height: 1.11111111vw;
+  background-color: #EEEEEE;
+  margin-top: 0vw;
+  margin-right: 1.11111111vw;
+  margin-bottom: 0vw;
+  margin-left: 1.11111111vw;
+  opacity: 1;
+}
+.container .wrap section article.banner .swiper .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: #103831;
 }
 .container .wrap section article.ins {
   padding-top: 47.22222222vw;
@@ -1337,10 +1385,6 @@ input[type='number'] {
 .container .wrap section.order article.orderer .pay-wrap label input {
   display: none;
 }
-.container .wrap section.order article.orderer ::placeholder {
-  font-size: 4.16666667vw;
-  color: #AAAAAA;
-}
 .container .wrap section.order article .buy-btn {
   font-size: 4.16666667vw;
   line-height: 13.88888889vw;
@@ -1584,6 +1628,138 @@ input[type='number'] {
   -webkit-appearance: none;
   margin: 0;
   opacity: 0;
+}
+.container .wrap section.faq article .tit {
+  font-size: 5vw;
+  line-height: 6.11111111vw;
+  letter-spacing: -0.01em;
+  color: #333333;
+  margin-bottom: 11.11111111vw;
+  font-weight: 600;
+}
+.container .wrap section.faq article .search-top {
+  zoom: 1;
+}
+.container .wrap section.faq article .search-top:after {
+  content: '';
+  display: block;
+  clear: both;
+  font-size: 0;
+  height: 0;
+  visibility: hidden;
+}
+.container .wrap section.faq article .search-top .input {
+  width: 83.33333333vw;
+  height: 13.33333333vw;
+  line-height: 13.33333333vw;
+  position: relative;
+  margin-bottom: 8.33333333vw;
+}
+.container .wrap section.faq article .search-top .input input {
+  font-size: 4.16666667vw;
+  font-weight: 500;
+  border: 1px solid #ddd;
+  width: 100%;
+  height: 100%;
+  padding-top: 0vw;
+  padding-right: 5.55555556vw;
+  padding-bottom: 0vw;
+  padding-left: 5.55555556vw;
+  box-sizing: border-box;
+}
+.container .wrap section.faq article .search-top .input .btn {
+  width: 4.16666667vw;
+  height: 4.16666667vw;
+  background-repeat: no-repeat;
+  background-image: url('../shop/images/mo/search.svg');
+  background-size: contain;
+  position: absolute;
+  right: 5.55555556vw;
+  top: 4.44444444vw;
+  left: auto;
+  bottom: auto;
+}
+.container .wrap section.faq article .search-top .num-select {
+  width: 41.66666667vw;
+  float: right;
+  color: #555;
+  margin-bottom: 0vw;
+}
+.container .wrap section.faq article .search-top .num-select .opt-list {
+  width: 41.66666667vw;
+  box-sizing: border-box;
+  left: -0.27777778vw;
+  color: #333;
+}
+.container .wrap section.faq article .faq-list {
+  margin-top: 5.55555556vw;
+  border-top: 0.55555556vw solid #103831;
+}
+.container .wrap section.faq article .faq-list li {
+  width: 83.33333333vw;
+  text-align: left;
+  border-bottom: 1px solid #DDDDDD;
+  cursor: pointer;
+}
+.container .wrap section.faq article .faq-list li.head {
+  display: none;
+}
+.container .wrap section.faq article .faq-list li > div {
+  padding-top: 4.72222222vw;
+  padding-right: 2.77777778vw;
+  padding-bottom: 4.72222222vw;
+  padding-left: 2.77777778vw;
+  box-sizing: border-box;
+}
+.container .wrap section.faq article .faq-list li > div i {
+  font-size: 3.33333333vw;
+  line-height: 8.33333333vw;
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+  width: 8.33333333vw;
+  height: 8.33333333vw;
+  border-radius: 50%;
+  background-color: #EEEEEE;
+  margin-right: 2.77777778vw;
+}
+.container .wrap section.faq article .faq-list li > div i span:nth-child(2) {
+  display: none;
+}
+.container .wrap section.faq article .faq-list li > div s {
+  display: none;
+}
+.container .wrap section.faq article .faq-list li > div p {
+  font-size: 4.16666667vw;
+  line-height: 6.11111111vw;
+  letter-spacing: -0.01em;
+  color: #333;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 1.11111111vw;
+  width: 63.88888889vw;
+  word-break: keep-all;
+  font-weight: 500;
+}
+.container .wrap section.faq article .faq-list li > div p b {
+  font-weight: 500;
+}
+.container .wrap section.faq article .faq-list li .a {
+  display: none;
+  border-top: 1px solid #ddd;
+}
+.container .wrap section.faq article .faq-list li .a i {
+  background-color: #103831;
+  color: #fff;
+}
+.container .wrap section.faq article .faq-list li.on .q {
+  background-color: #F8F8F8;
+}
+.container .wrap section.faq article .faq-list li.on .a {
+  display: block;
+}
+.container .wrap section.faq article .pagination {
+  display: none;
 }
 .container .wrap footer {
   padding-top: 0vw;
