--- a/css/shop-pc.css
+++ b/css/shop-pc.css
@@ -38,6 +38,9 @@
     right: 19px;
     height: 100%;
   }
+  ::placeholder {
+    font-size: 0.68181818rem;
+  }
   .container .wrap {
     min-width: 49.09090909rem;
     min-height: 49.09090909rem;
@@ -90,7 +93,7 @@
     right: auto;
     bottom: auto;
     text-align: right;
-    margin-left: 1.36363636rem;
+    margin-left: -4.81818182rem;
   }
   .container .wrap header .menu-list .menu-item {
     font-size: 0.68181818rem;
@@ -187,6 +190,56 @@
     margin-bottom: 2.27272727rem;
     border-radius: 0.18181818rem;
     overflow: hidden;
+  }
+  .container .wrap section article.banner {
+    margin-top: 5.90909091rem;
+  }
+  .container .wrap section article.banner .swiper {
+    width: 49.09090909rem;
+  }
+  .container .wrap section article.banner .swiper .swiper-slide {
+    padding-top: 1rem;
+    position: relative;
+    background-repeat: no-repeat;
+    background-image: url('../shop/images/pc/banner.png');
+    background-size: contain;
+    width: 49.09090909rem;
+    height: 5.45454545rem;
+  }
+  .container .wrap section article.banner .swiper .swiper-slide:after {
+    content: '';
+    display: block;
+    width: 11.36363636rem;
+    height: 5.45454545rem;
+    background-repeat: no-repeat;
+    background-image: url('../shop/images/pc/banner1.png');
+    background-size: contain;
+    position: absolute;
+    left: 24.54545455rem;
+    top: 0rem;
+    right: auto;
+    bottom: auto;
+  }
+  .container .wrap section article.banner .swiper .swiper-slide p {
+    font-size: 0.81818182rem;
+    line-height: 0.90909091rem;
+    letter-spacing: -0.01em;
+    position: absolute;
+    left: 13.18181818rem;
+    top: 1.81818182rem;
+    right: auto;
+    bottom: auto;
+  }
+  .container .wrap section article.banner .swiper .swiper-pagination {
+    bottom: -0.90909091rem;
+  }
+  .container .wrap section article.banner .swiper .swiper-pagination .swiper-pagination-bullet {
+    width: 0.18181818rem;
+    height: 0.18181818rem;
+    margin-top: 0rem;
+    margin-right: 0.18181818rem;
+    margin-bottom: 0rem;
+    margin-left: 0.18181818rem;
   }
   .container .wrap section article.ins {
     padding-top: 14.09090909rem;
@@ -992,6 +1045,124 @@
     width: 7.27272727rem;
     height: 2.27272727rem;
     padding-left: 0.90909091rem;
+  }
+  .container .wrap section.faq article .tit {
+    font-size: 1.36363636rem;
+    line-height: 1.63636364rem;
+    letter-spacing: -0.01em;
+    margin-bottom: 2.72727273rem;
+  }
+  .container .wrap section.faq article .search-top .input {
+    width: 49.09090909rem;
+    height: 4.54545455rem;
+    margin-bottom: 1.36363636rem;
+    padding-top: 1.18181818rem;
+    padding-right: 11.59090909rem;
+    padding-bottom: 1.18181818rem;
+    padding-left: 11.59090909rem;
+  }
+  .container .wrap section.faq article .search-top .input input {
+    font-size: 0.68181818rem;
+    width: 18.18181818rem;
+    height: 2.18181818rem;
+    line-height: 2.18181818rem;
+    padding-top: 0rem;
+    padding-right: 0.90909091rem;
+    padding-bottom: 0rem;
+    padding-left: 0.90909091rem;
+    margin-right: 0.45454545rem;
+  }
+  .container .wrap section.faq article .search-top .input .btn {
+    font-size: 0.68181818rem;
+    line-height: 2.18181818rem;
+    width: 7.27272727rem;
+    height: 2.18181818rem;
+  }
+  .container .wrap section.faq article .search-top .num-select {
+    width: 7.27272727rem;
+  }
+  .container .wrap section.faq article .search-top .num-select .opt-list {
+    width: 7.27272727rem;
+    left: -0.04545455rem;
+  }
+  .container .wrap section.faq article .faq-list {
+    margin-top: 0.90909091rem;
+    border-top: 0.09090909rem solid #103831;
+  }
+  .container .wrap section.faq article .faq-list li {
+    width: 49.09090909rem;
+  }
+  .container .wrap section.faq article .faq-list li.head p {
+    font-size: 0.68181818rem;
+    line-height: 3.18181818rem;
+  }
+  .container .wrap section.faq article .faq-list li.head p:nth-child(1) {
+    width: 5.45454545rem;
+  }
+  .container .wrap section.faq article .faq-list li.head p:nth-child(2) {
+    width: 7.27272727rem;
+  }
+  .container .wrap section.faq article .faq-list li.head p:nth-child(3) {
+    width: 36.36363636rem;
+  }
+  .container .wrap section.faq article .faq-list li > div {
+    padding-top: 1.18181818rem;
+    padding-right: 0rem;
+    padding-bottom: 1.18181818rem;
+    padding-left: 0rem;
+  }
+  .container .wrap section.faq article .faq-list li > div i {
+    font-size: 0.68181818rem;
+    line-height: 0.81818182rem;
+    width: 5.45454545rem;
+  }
+  .container .wrap section.faq article .faq-list li > div s {
+    font-size: 0.68181818rem;
+    line-height: 0.81818182rem;
+    width: 7.27272727rem;
+  }
+  .container .wrap section.faq article .faq-list li > div p {
+    font-size: 0.68181818rem;
+    line-height: 0.81818182rem;
+    letter-spacing: -0.01em;
+    vertical-align: top;
+    margin-top: 0rem;
+    width: 19.68181818rem;
+    padding-left: 1.36363636rem;
+    box-sizing: border-box;
+  }
+  .container .wrap section.faq article .faq-list li.on .a {
+    padding: 1.81818182rem;
+  }
+  .container .wrap section.faq article .faq-list li.on .a i {
+    width: 1.36363636rem;
+    height: 1.36363636rem;
+    line-height: 1.36363636rem;
+  }
+  .container .wrap section.faq article .faq-list li.on .a p {
+    line-height: 1rem;
+    margin-top: 0.18181818rem;
+    width: 22.72727273rem;
+    padding-left: 0.63636364rem;
+  }
+  .container .wrap section.faq article .faq-list li.on .a p b {
+    margin-bottom: 1.13636364rem;
+  }
+  .container .wrap section.faq article .pagination {
+    margin-top: 3.63636364rem;
+  }
+  .container .wrap section.faq article .pagination .inner a {
+    font-size: 0.54545455rem;
+    letter-spacing: -0.01em;
+    width: 1.54545455rem;
+    height: 1.54545455rem;
+    line-height: 1.54545455rem;
+  }
+  .container .wrap section.faq article .pagination .inner a:after {
+    content: '';
+    display: block;
+    width: 0.63636364rem;
+    height: 0.63636364rem;
   }
   .container .wrap footer {
     padding-top: 0rem;
